--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -7,7 +7,6 @@
 
 body {
     background-image: linear-gradient(135deg, var(--backcolour1), var(--backcolour2), var(--backcolour3));
-
 }
 /* Title Field */
 .TitleBox {
@@ -96,14 +95,14 @@ body {
 }
 /* Menu & Buttons */
 #Menu {
-    width: 250px;
-    height: 850px;
-    position: relative;
+    width: 240px;
+    height: 100%;
+    position: absolute;
     margin-left: auto;
-    margin-right: 15px;
-    margin-top: -600px;
-    overflow-y: scroll;
-    background-color: rgb(112, 231, 231);
+    top: 0px;
+    right: 20px;
+    overflow-y: auto;
+    background-color: rgba(199, 215, 215, 0.7);
 }
 #Menu:hover + .Button {
     background-color: #a13f3f;
@@ -116,10 +115,9 @@ body {
 
     border: none;
     cursor: pointer;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     margin-right: 0px;
-
 }
 #AddButton {
     width: auto;
@@ -128,9 +126,12 @@ body {
     left: -17px;
 }
 #AddButtonB {
+    flex-wrap: nowrap;
     position: relative;
     width: 80px;
     height: 80px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     border-radius: 40px;
 
     border: none;
@@ -138,7 +139,6 @@ body {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     cursor: pointer;
     margin-top: 10px;
@@ -153,7 +153,7 @@ body {
 
     border: none;
     color: rgb(36, 28, 28);
-    padding: 15px 32px;
+    padding: 15px 22px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
